feat(sponsor):
EndedBackend sponsors

Signed-off-by: AgusGallegoG <agus.verin7@gmail.com>